 status2018-12-13  Jim Fowler  <jrf@biblion>

	* Tools/python/doc/lib/configuration.rst: Begin write up about
	configuration files and command line arguments. This was prior to
	writing code so I basicly did a top-down construction sequence.

2018-12-05  Jim Fowler  <jrf@biblion>

	* Tools/python/aabooks/journal/journalwindow.py
	(JournalWindow._save_file): Replace all single character variable
	names.  Made most functions for menus and buttons as semi-private
	function i.e. _func().  Need to replace non-public instance attributes
	with a dictionary of attributes.

2018-12-04  Jim Fowler  <jrf@biblion>

	* Tools/python/aabooks/journal/journalwindow.py: Tested
	the journal program.  Made three corrections to function
	call to replace camelCase with snake_case.

2018-12-02  Jim Fowler  <jrf@biblion>

	* Tools/python/aabooks/journal/journalwindow.py: Cleaned up
	journalentry.py, journalfile.py, journalmenus.py, jsearch.py,
	and journalwindow.py.  Some files still need work.

2018-11-30  Jim Fowler  <jrf@biblion>

	* Tools/python/aabooks/ajbbook: Test and fix function
	names in ajbbooks files.  The code correctly handles most
	actions now.

2018-11-26  Jim Fowler  <jrf@biblion>

	* Tools/python/aabooks/ajbbook/: began PIP-8 compliance
	in ajbbook. Rename files in camel case to snake case.

2018-11-25  Jim Fowler  <jrf@biblion>

	* Tools/python/aabooks/lib: make PEP-8 compliance
	for search.py, title_list.py, __init__.py, roman.py,
	version.py, utils.py, symbol.py, parser.py, and others

2018-10-15  Jim Fowler  <jrf@biblion>

	* .gitignore: placed generic patterns in toplevel files
	and specific pattern in directory .gitignore files.

2018-10-14  Jim Fowler  <jrf@biblion>

	* Tools/python/aabooks/lib/entryselect.py: Began PEP-8 work

2018-10-19  Jim Fowler  <jrf@biblion>

	* Docs/*/Makefile.am: added .lot file to TeX clean

2018-09-28  Jim Fowler  <jrf@biblion>

	* Docs/Series/table.py: now PEP-8 compliant

2018-09-26  Jim Fowler  <jrf@biblion>
